# TopoSort-RAG

./: .env.example  .gitignore  README.md  _token.txt  alembic.ini  celery_app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sse_output.txt  start_demo.sh  test_hitl.py
agents/: base_agent.py
alembic/: env.py
api/: auth.py  dependencies.py  middleware.py  routes.py  scheduled_jobs.py  streaming.py
auth/: __init__.py  dependencies.py  jwt.py  models.py  password.py  routes.py
config/: __init__.py  agent_registry.yaml  model_list.py  settings.py
connectors/: __init__.py  base.py  encryption.py  github.py  gmail.py  models.py  registry.py  routes.py  token_manager.py
core/: agent_factory.py  composer_agent.py  master_agent.py  memory_extractor.py  memory_manager.py  orchestrator.py  state_manager.py  title_generator.py
database/: helpers.py  models.py  schema.sql  session.py
document_pipeline/: chunker.py  document_processor.py  embedder.py  parser.py  vector_store.py  vision.py  web_scraper.py
frontend/: dashboard.html  dashboard.py  index.html  shared.html
scripts/: start_demo.sh
security/: __init__.py  code_validator.py  config.py  delimiters.py  middleware.py  rate_limiter.py  sanitization.py  validators.py
storage/: __init__.py  s3.py
tasks/: document_tasks.py  schedule_sync.py  scheduled_job_tasks.py  web_scrape_tasks.py
tests/: test_dependency_resolver.py  test_master_agent.py  test_orchestrator.py  test_tool_registry.py
tools/: __init__.py  code_tools.py  github_tools.py  mail_tools.py  rag_tools.py  registry.py  (+1 more)
(+31 files in other folders)
